package ens.etsmtl.ca.accountservice.model;

public enum AccountStatus {
    ACTIVE,
    FROZEN,
    CLOSED
}
