package ens.etsmtl.ca.accountservice.model;

public enum AccountType {
    CHEQUING,
    SAVINGS
}
