package ens.etsmtl.ca.clientservice.model;

public enum ClientStatus {
    PENDING,
    ACTIVE,
    REJECTED
}

