package ens.etsmtl.ca.ledgerservice.model;

public enum EntryType {
    ACCOUNT_CREATION,
    DEBIT,
    CREDIT
}
