package ens.etsmtl.ca.paymentservice.model;

public enum TransactionStatus {
    PENDING,
    COMPLETED,
    REJECTED
}
