@startuml Classes
title CanBankX - Diagramme de classes

hide empty members

enum ClientStatus {
    PENDING
    APPROVED
    REFUSED
    SUSPENDED
}

enum AccountType {
    CHECKING
    SAVINGS
}

enum AccountStatus {
    ACTIVE
    FROZEN
    CLOSED
}

enum EntryType {
    DEBIT
    CREDIT
}

enum TransactionStatus {
    PENDING
    COMPLETED
    REJECTED
}

class Client {
    - id : Long
    - lastName : String
    - firstName : String
    - sin : String
    - email : String
    - phone : String
    - creationDate : Date
    - status : ClientStatus
}

class Account {
    - id : Long
    - type : AccountType
    - accountNumber : String
    - balance : Double
    - creationDate : Date
    - status : AccountStatus
}

abstract class Transaction {
    - id : Long
    - idempotencyKey : String
    - amount : Double
    - creationDate : Date
    - status : TransactionStatus
}

class Transfer {
    - destinationEmail : String
}

class Payment #00FF00 {
}

class Supplier #00FF00 {
    - id : Long
    - name : String
    - serviceType : String
    - paymentReference : String
}

class LedgerEntry {
    - id : Long
    - idempotencyKey : String
    - amount : Double
    - date : Date
    - entryType : EntryType
}

Transaction <|-- Transfer
Transaction <|-- Payment

Client "1" -- "*" Account : possède >

Transfer "*" -- "1" Account : compteSource >
Transfer "*" -- "1" Client : clientDestinataire >
Transfer "*" -- "0..1" Account : compteDestination >

Payment "*" -- "1" Account : compteSource >
Payment "*" -- "1" Supplier : fournisseur >

Transaction "1" -- "*" LedgerEntry : génère >
LedgerEntry "*" -- "1" Account : account >

legend
    |Couleur| Description |
    | | Implémenté |
    |<#00FF00>| Non implémenté |
end legend
@enduml